2015-01-20  Nikos Mavrogiannopoulos <nmav@gnutls.org>

	* NEWS: released 0.9.0

2015-01-20  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* doc/sample.config, src/ocserv-args.def: doc update

2015-01-20  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* NEWS: doc update

2015-01-20  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/system.c: properly disable safe_fork

2015-01-20  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/config.c: corrected isolate-workers typo

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* configure.ac, src/ocpasswd.c: ocpasswd: attempt to use sha2crypt
	only in glibc uclibc's crypt(3) is so dumb it will not error if $5$ is specified
	as salt, but not supported.

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/ocpasswd.c: ocpasswd: corrected fallback to MD5 crypt

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* NEWS: doc update

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* tests/docker-ocserv/ocserv-unix.conf: tests: enable compression in
	the unix test

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* configure.ac: disable linux namespaces by default

2015-01-19  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/system.c, src/system.h: only define safe_fork() in systems
	with linux namespaces

2015-01-18  Nikos Mavrogiannopoulos <nmav@gnutls.org>

	* src/main-ctl-unix.c, src/sec-mod.c, src/system.c, src/system.h: 
	silence debugging messages from sec-mod when not in debug

2015-01-18  Nikos Mavrogiannopoulos <nmav@gnutls.org>

	* src/ocserv-args.def: doc update

2015-01-16  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/worker-http.c, src/worker-vpn.c, src/worker.h: move more
	http-related functions to worker-http

2015-01-16  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/lzs.c, src/lzs.h: updated copyright information in LZS code

2015-01-16  Nikos Mavrogiannopoulos <nmav@redhat.com>

	* src/worker-http.c: combined parsing of CSTP and DTLS encoding
