@@ -1,3 +1,7 @@
+2015-01-21  Nikos Mavrogiannopoulos <nmav@gnutls.org>
+
+	* src/Makefile.am: include http-heads.h into ocserv's sources
+
 2015-01-20  Nikos Mavrogiannopoulos <nmav@gnutls.org>
 
 	* NEWS: released 0.9.0
